--- a/style.css
+++ b/style.css
@@ -938,8 +938,10 @@ header {
     }
 
     .about .about-img {
-        margin-top: 50px; /* Space above image */
         height: 200px; /* Further reduced height */
+        width: 150px;
+        margin-top: 5%;
+        margin-left: 30px;
     }
 
     .about-text h2 {
@@ -1023,6 +1025,11 @@ header {
     }
     .form-box {
         margin-left: 0px;
+    }
+    .main {
+        margin-top: 20%;
+        flex-direction: column;
+        align-items: center;
     }
 
 }
